refact: use a slim way to build docker image on latest code & support zgc (#2118)
* also modify shell